--- a/version.html
+++ b/version.html
@@ -6,6 +6,7 @@
 <body>
   Current version: <span id="version">vX.Y.Z</span>
   <div id="messages"></div>
+   <webview src="https://github.com/" style="width:640px; height:480px"></webview>
 <script>
 // Display the current version
 let version = window.location.hash.substring(1);
